--- a/part_1_mars_news.ipynb
+++ b/part_1_mars_news.ipynb
@@ -11,18 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from bs4 import BeautifulSoup as soup\n",
+    "import requests\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -45,25 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NoSuchWindowException",
-     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF764EC3AF5+28005]\n\t(No symbol) [0x00007FF764E283F0]\n\t(No symbol) [0x00007FF764CC580A]\n\t(No symbol) [0x00007FF764C9FA85]\n\t(No symbol) [0x00007FF764D42AD7]\n\t(No symbol) [0x00007FF764D5B1B1]\n\t(No symbol) [0x00007FF764D3B7E3]\n\t(No symbol) [0x00007FF764D075C8]\n\t(No symbol) [0x00007FF764D08731]\n\tGetHandleVerifier [0x00007FF7651B646D+3118813]\n\tGetHandleVerifier [0x00007FF765206CC0+3448624]\n\tGetHandleVerifier [0x00007FF7651FCF3D+3408301]\n\tGetHandleVerifier [0x00007FF764F8A44B+841403]\n\t(No symbol) [0x00007FF764E3344F]\n\t(No symbol) [0x00007FF764E2F4C4]\n\t(No symbol) [0x00007FF764E2F65D]\n\t(No symbol) [0x00007FF764E1EBB9]\n\tBaseThreadInitThunk [0x00007FF81802259D+29]\n\tRtlUserThreadStart [0x00007FF818E4AF38+40]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Visit the Mars news site\u001b[39;00m\n\u001b[0;32m      2\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://static.bc-edx.com/data/web/mars_news/index.html\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 3\u001b[0m browser\u001b[38;5;241m.\u001b[39mvisit(url)\n",
-      "File \u001b[1;32mc:\\Users\\NECEE\\anaconda3\\Anaconda\\Lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:318\u001b[0m, in \u001b[0;36mBaseWebDriver.visit\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mvisit\u001b[39m(\u001b[38;5;28mself\u001b[39m, url):\n\u001b[1;32m--> 318\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdriver\u001b[38;5;241m.\u001b[39mget(url)\n",
-      "File \u001b[1;32mc:\\Users\\NECEE\\anaconda3\\Anaconda\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:357\u001b[0m, in \u001b[0;36mWebDriver.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    355\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    356\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Loads a web page in the current browser session.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 357\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexecute(Command\u001b[38;5;241m.\u001b[39mGET, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m: url})\n",
-      "File \u001b[1;32mc:\\Users\\NECEE\\anaconda3\\Anaconda\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:348\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    346\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 348\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39merror_handler\u001b[38;5;241m.\u001b[39mcheck_response(response)\n\u001b[0;32m    349\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    350\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\NECEE\\anaconda3\\Anaconda\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=130.0.6723.70)\nStacktrace:\n\tGetHandleVerifier [0x00007FF764EC3AF5+28005]\n\t(No symbol) [0x00007FF764E283F0]\n\t(No symbol) [0x00007FF764CC580A]\n\t(No symbol) [0x00007FF764C9FA85]\n\t(No symbol) [0x00007FF764D42AD7]\n\t(No symbol) [0x00007FF764D5B1B1]\n\t(No symbol) [0x00007FF764D3B7E3]\n\t(No symbol) [0x00007FF764D075C8]\n\t(No symbol) [0x00007FF764D08731]\n\tGetHandleVerifier [0x00007FF7651B646D+3118813]\n\tGetHandleVerifier [0x00007FF765206CC0+3448624]\n\tGetHandleVerifier [0x00007FF7651FCF3D+3408301]\n\tGetHandleVerifier [0x00007FF764F8A44B+841403]\n\t(No symbol) [0x00007FF764E3344F]\n\t(No symbol) [0x00007FF764E2F4C4]\n\t(No symbol) [0x00007FF764E2F65D]\n\t(No symbol) [0x00007FF764E1EBB9]\n\tBaseThreadInitThunk [0x00007FF81802259D+29]\n\tRtlUserThreadStart [0x00007FF818E4AF38+40]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Visit the Mars news site\n",
     "url = 'https://static.bc-edx.com/data/web/mars_news/index.html'\n",
@@ -82,20 +69,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bs4.BeautifulSoup"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Create a Beautiful Soup object\n",
+    "html = browser.html\n",
+    "parser = soup(browser.html,'html.parser')\n",
+    "table = parser.find_all('div',class_='list_text')\n",
+    "soup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 9, 2022</div>\n",
+       " <div class=\"content_title\">NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm</div>\n",
+       " <div class=\"article_teaser_body\">For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">November 1, 2022</div>\n",
+       " <div class=\"content_title\">NASA Prepares to Say 'Farewell' to InSight Spacecraft</div>\n",
+       " <div class=\"article_teaser_body\">A closer look at what goes into wrapping up the mission as the spacecraft’s power supply continues to dwindle.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">October 28, 2022</div>\n",
+       " <div class=\"content_title\">NASA and ESA Agree on Next Steps to Return Mars Samples to Earth</div>\n",
+       " <div class=\"article_teaser_body\">The agency’s Perseverance rover will establish the first sample depot on Mars.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">October 27, 2022</div>\n",
+       " <div class=\"content_title\">NASA's InSight Lander Detects Stunning Meteoroid Impact on Mars</div>\n",
+       " <div class=\"article_teaser_body\">The agency’s lander felt the ground shake during the impact while cameras aboard the Mars Reconnaissance Orbiter spotted the yawning new crater from space.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">October 21, 2022</div>\n",
+       " <div class=\"content_title\">NASA To Host Briefing on InSight, Mars Reconnaissance Orbiter Findings</div>\n",
+       " <div class=\"article_teaser_body\">Scientists from two Mars missions will discuss how they combined images and data for a major finding on the Red Planet.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">October 20, 2022</div>\n",
+       " <div class=\"content_title\">Why NASA Is Trying To Crash Land on Mars</div>\n",
+       " <div class=\"article_teaser_body\">Like a car’s crumple zone, the experimental SHIELD lander is designed to absorb a hard impact.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">October 19, 2022</div>\n",
+       " <div class=\"content_title\">Curiosity Mars Rover Reaches Long-Awaited Salty Region</div>\n",
+       " <div class=\"article_teaser_body\">After years of climbing, the Mars rover has arrived at a special region believed to have formed as Mars’ climate was drying.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">October 12, 2022</div>\n",
+       " <div class=\"content_title\">Mars Mission Shields Up for Tests</div>\n",
+       " <div class=\"article_teaser_body\">Protecting Mars Sample Return spacecraft from micrometeorites requires high-caliber work.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">October 7, 2022</div>\n",
+       " <div class=\"content_title\">NASA's InSight Waits Out Dust Storm</div>\n",
+       " <div class=\"article_teaser_body\">InSight’s team is taking steps to help the solar-powered lander continue operating for as long as possible.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">September 19, 2022</div>\n",
+       " <div class=\"content_title\">NASA's InSight 'Hears' Its First Meteoroid Impacts on Mars</div>\n",
+       " <div class=\"article_teaser_body\">The Mars lander’s seismometer has picked up vibrations from four separate impacts in the past two years.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">September 15, 2022</div>\n",
+       " <div class=\"content_title\">NASA's Perseverance Rover Investigates Geologically Rich Mars Terrain</div>\n",
+       " <div class=\"article_teaser_body\">The latest findings provide greater detail on a region of the Red Planet that has a watery past and is yielding promising samples for the NASA-ESA Mars Sample Return campaign.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">September 12, 2022</div>\n",
+       " <div class=\"content_title\">NASA to Host Briefing on Perseverance Mars Rover Mission Operations</div>\n",
+       " <div class=\"article_teaser_body\">Members of the mission will discuss the rover’s activities as it gathers samples in an ancient river delta.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">August 25, 2022</div>\n",
+       " <div class=\"content_title\">NASA's Perseverance Makes New Discoveries in Mars' Jezero Crater</div>\n",
+       " <div class=\"article_teaser_body\">The rover found that Jezero Crater’s floor is made up of volcanic rocks that have interacted with water.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">August 5, 2022</div>\n",
+       " <div class=\"content_title\">10 Years Since Landing, NASA's Curiosity Mars Rover Still Has Drive</div>\n",
+       " <div class=\"article_teaser_body\">Despite signs of wear, the intrepid spacecraft is about to start an exciting new chapter of its mission as it climbs a Martian mountain.</div>\n",
+       " </div>,\n",
+       " <div class=\"list_text\">\n",
+       " <div class=\"list_date\">August 4, 2022</div>\n",
+       " <div class=\"content_title\">SAM's Top 5 Discoveries Aboard NASA's Curiosity Rover at Mars</div>\n",
+       " <div class=\"article_teaser_body\">“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.</div>\n",
+       " </div>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Extract all the text elements\n"
+    "# Extract all the text elements\n",
+    "text_elements =parser.select('div.list_text')\n",
+    "text_elements"
    ]
   },
   {
@@ -122,28 +211,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty list to store the dictionaries\n"
+    "# Create an empty list to store the dictionaries\n",
+    "mars_list = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loop through the text elements\n",
+    "for x in text_elements:\n",
     "# Extract the title and preview text from the elements\n",
+    "    title=x.select_one('div.content_title').get_text()\n",
+    "    preview=x.select_one('div.article_teaser_body').get_text()\n",
     "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
+    "    news_dict = {}\n",
+    "\n",
+    "    news_dict[\"title\"]=title\n",
+    "    news_dict[\"preview\"]=preview \n",
+    "# Add the dictionary to the list\n",
+    "    mars_list.append(news_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -181,18 +279,19 @@
        "  'preview': '“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Print the list to confirm success\n"
+    "# Print the list to confirm success\n",
+    "mars_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
